fix overflow

--- a/app/assets/css/floorplan.less
+++ b/app/assets/css/floorplan.less
@@ -103,6 +103,9 @@
         text-align: left;
         padding-top: @seat-size*0.1;
         padding-left: @seat-size*1.1;
+        overflow:hidden;
+        white-space:nowrap;
+        text-overflow:ellipsis;
     }
 
     .legend-label-free {
